8295125: os::signal should be os specific

Reviewed-by: jsjolen, kbarrett